# fast-diff-mcp

./: .dockerignore  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.py  fast_diff_mcp.pyi  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: CI.yml
.serena/: project.yml
src/: lib.rs
