[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fast-diff-mcp"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "fastmcp>=2.12.5",
]

[project.optional-dependencies]
dev = [
    "faker>=37.11.0",
    "fast-diff-mcp",
    "pyo3-stubgen>=0.3.0",
    "pyperf>=2.9.0",
]
[tool.maturin]
features = ["pyo3/extension-module"]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
fast-diff-mcp = { workspace = true, editable = true }
